--- a/package.json
+++ b/package.json
@@ -21,29 +21,33 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.21.0",
+    "@nutui/nutui-react-taro": "^1.4.13",
     "@tarojs/components": "3.6.2",
     "@tarojs/helper": "3.6.2",
-    "@tarojs/plugin-platform-weapp": "3.6.2",
+    "@tarojs/plugin-framework-react": "3.6.2",
+    "@tarojs/plugin-html": "3.6.2",
     "@tarojs/plugin-platform-alipay": "3.6.2",
-    "@tarojs/plugin-platform-tt": "3.6.2",
-    "@tarojs/plugin-platform-swan": "3.6.2",
+    "@tarojs/plugin-platform-h5": "3.6.2",
     "@tarojs/plugin-platform-jd": "3.6.2",
     "@tarojs/plugin-platform-qq": "3.6.2",
-    "@tarojs/plugin-platform-h5": "3.6.2",
+    "@tarojs/plugin-platform-swan": "3.6.2",
+    "@tarojs/plugin-platform-tt": "3.6.2",
+    "@tarojs/plugin-platform-weapp": "3.6.2",
+    "@tarojs/react": "3.6.2",
     "@tarojs/runtime": "3.6.2",
     "@tarojs/shared": "3.6.2",
     "@tarojs/taro": "3.6.2",
-    "@tarojs/react": "3.6.2",
-    "@tarojs/plugin-html": "3.6.2",
-    "@tarojs/plugin-framework-react": "3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-refresh": "^0.14.0",
-    "@nutui/nutui-react-taro": "^1.4.13"
+    "taro-plugin-tailwind": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
+    "@dcasia/mini-program-tailwind-webpack-plugin": "^1.5.6",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@tarojs/cli": "3.6.2",
+    "@tarojs/webpack5-runner": "3.6.2",
     "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
@@ -51,12 +55,8 @@
     "@types/react-test-renderer": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
     "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/parser": "^5.57.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "postcss": "^8.4.21",
-    "@tarojs/webpack5-runner": "3.6.2",
-    "webpack": "^5.77.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
+    "@typescript-eslint/parser": "^5.57.0",
     "babel-plugin-import": "^1.13.6",
     "babel-preset-taro": "3.6.2",
     "eslint": "^8.37.0",
@@ -64,9 +64,11 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "stylelint": "^15.3.0",
+    "postcss": "^8.4.21",
     "style-loader": "3.3.2",
-    "typescript": "^5.0.3"
+    "stylelint": "^15.3.0",
+    "typescript": "^5.0.3",
+    "webpack": "^5.77.0"
   },
   "resolutions": {
     "@swc/core": "1.3.42"
