--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
     "rootDir": ".",
     "jsx": "react-jsx",
     "allowJs": true,
@@ -23,5 +26,5 @@
     ]
   },
   "include": ["./src", "./types"],
-  "compileOnSave": false
+  "compileOnSave": false,
 }
