--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "build:weapp": "taro build --type weapp",
-    "dev:weapp": "npm run build:weapp -- --watch"
+    "dev:weapp": "NODE_ENV=production npm run build:weapp -- --watch",
+    "dev": "npm run build:weapp -- --watch"
   },
   "browserslist": [
     "last 3 versions",
